Fixed reCaptcha error and added spacing to inputs

--- a/src/sass/_large.scss
+++ b/src/sass/_large.scss
@@ -252,7 +252,7 @@
 			color: rgba(255, 255, 255, 0.15);
 
 			&--first {
-				bottom: -.45em;
+				bottom: -0.45em;
 				left: 2.25em;
 				animation: icon-bounce 5s infinite;
 			}
