--- a/src/sass/_style.scss
+++ b/src/sass/_style.scss
@@ -371,6 +371,8 @@ body {
 		border: 1px solid globals.$border-color;
 		box-shadow: inset 0 0 0.25em globals.$white-color, 0 0 0.25em globals.$white-color;
 		font-family: globals.$main-font;
+		font-size: 0.9em;
+		letter-spacing: 1px;
 		transition: border 0.3s, box-shadow 0.3s;
 	}
 
@@ -405,6 +407,8 @@ body {
 		border: 1px solid globals.$border-color;
 		box-shadow: inset 0 0 0.25em globals.$white-color, 0 0 0.25em globals.$white-color;
 		font-family: globals.$main-font;
+		font-size: 0.9em;
+		letter-spacing: 1px;
 		transition: border 0.3s, box-shadow 0.3s;
 		resize: vertical;
 	}
